--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
+.workspace {
+  width: 550px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+form {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+form p {
+  display: grid;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form input {
+  width: 180px;
+  margin-top: 5px;
+  padding: 10px 5px;
+  border: 2px solid #000000;
+  border-radius: 10px;
+}
+
+form button {
+  cursor: pointer;
+  width: 70px;
+  margin-top: 20px;
+  padding: 10px 5px;
+  border: 2px solid #000000;
+  border-radius: 10px;
+  background-color: #ffffff;
+}
+
+form button:hover {
+  background-color: #eeeeee;
+}
+
+form button:active {
+  transform: translateY(1px);
+}
+
+table {
+  margin-left: -15px;
+  width: 550px;
+  border-spacing: 15px;
+}
+
+th {
+  font-weight: normal;
+}
+
+tbody {
+  display: block;
+  width: 550px;
+  border: 2px solid black;
+  border-radius: 30px;
+}
+
+tr {
+  display: flex;
+  justify-content: space-around;
+  margin: 20px 0;
 }
